--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+.container{
+	background:lightgray;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+img{
+	width:300px;
+	height:200px;
+	object-fit:cover;
+}
+.btn{
+	padding: 10px ;
+	background:red;
+	color:white;
+	border-radius:10px;
+}
+.hero{
+	padding:20px
+}
