--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,30 @@
-/*  your css code here. If applicable */
-.container{
-	width:500px;
-	height:200px;
-	display:flex;
-	justify-content:center;
-	align-items:center;
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
-img{
-	;
-	object-fit:fill;
+.col-1>img{
+    width: 100%;
+    height: 100%;
+}
+
+
+
+.card{
+    display: flex;
+    width: 600px;
+    height: 300px;
+    border-radius: 10px;
+    box-shadow: 0px 8px 16px rgb(0,0,0,0.1);
+
+}
+.col-1{
+ flex: 2;
+}
+.col-2{
+    flex: 3;
 }
 .btn{
-	padding: 10px ;
-	background:red;
-	color:white;
-	border-radius:10px;
-	
-}
-.hero{
-	
-	padding-top:30%;
-	padding-bottom:30%;
+    background-color: rgb(189, 64, 15);
 }
