--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,7 @@ body{
     height: 100vh;
 }
 .col-1>img{
-    width: 100%;
-    height: 100%;
+  
 	object-fit:fill;
 }
 
@@ -25,7 +24,9 @@ body{
 }
 .col-2{
     flex: 3;
+	padding:30px;
 }
 .btn{
     background-color: rgb(189, 64, 15);
+margin-left:90px
 }
