--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,22 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-.col-1>img{
-  
-	object-fit:fill;
-}
-
-
-
 .hero{
-    display: flex;
-    width: 600px;
-    height: 300px;
-    border-radius: 10px;
-    box-shadow: 0px 8px 16px rgb(0,0,0,0.1);
-
+	display:flex;
+	justify-content:space-around;
+	align-items:center;
 }
-.col-1{
- flex: 2;
+.img{
+	width:50vw;
+	height:40vh;
 }
-.col-2{
-    flex: 3;
-	padding:30px;
+.div{
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	text-align:center;
 }
 .btn{
-    background-color: rgb(189, 64, 15);
-margin-left:90px
+	color:white;
+	background-color:orangered;
+	border:none;
+	padding:10px;
+	border-radius:5px;
 }
