--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
 	flex-direction:column;
 	align-items:center;
 	text-align:center;
+	  object-fit: cover;
 }
 .btn{
 	color:white;
@@ -19,4 +20,5 @@
 	border:none;
 	padding:10px;
 	border-radius:5px;
+
 }
