--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 	flex-direction:column;
 	align-items:center;
 	text-align:center;
-	  object-fit: cover;
+	  object-fit: fill;
 }
 .btn{
 	color:white;
