--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,14 @@
 .img{
 	width:50vw;
 	height:40vh;
+	  object-fit:cover;
 }
 .div{
 	display:flex;
 	flex-direction:column;
 	align-items:center;
 	text-align:center;
-	  object-fit: fill;
+	
 }
 .btn{
 	color:white;
