--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,13 @@
 }
 .image{
 	width:50vw;
-	height:40vh;
+	height:auto;
 	overflow:hidden;
 }
 .image>img{
-	object-fit: cover;
+	width: 100%;
+	height: 100%
+	object-fit: contain;
 }
 .div{
 	display:flex;
