--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,30 @@
+/*  your css code here. If applicable */
 .hero{
 	display:flex;
-	justify-content:space-around;
-	align-items:center;
+	display-content:center;
+	align-items: center;
+}
+.image-container{
+	width: 50vw;
+	height: auto;
 }
 .image{
-	width:50vw;
-	height:auto;
-	overflow:hidden;
-}
-.image>img{
 	width: 100%;
-	height: 100%
-	object-fit: contain;
+    height: 100%;
+    object-fit: cover;
 }
-.div{
+.content{
 	display:flex;
-	flex-direction:column;
-	align-items:center;
-	text-align:center;
-	
+	flex-direction: column;
+	margin: 50px;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
-.btn{
-	color:white;
-	background-color:orangered;
-	border:none;
-	padding:10px;
-	border-radius:5px;
-
+button{
+	padding: 10px;
+	background-color: #FF0002;
+	border: none;
+	color: white;
+	border-radius: 5px;
 }
